--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,20 @@
-<h1>HEllo wORLd</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birth Day</title>
+</head>
+<body>
+    <div>
+        <h1>BirthDay Date</h1>
+    </div>
+    <div>
+        <form>
+            <input type="text" placeholder="Name">
+            <input type="text" placeholder="date">
+            <button type="submit">Add</button>
+        </form>
+    </div>
+</body>
+</html>
