--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <div>
         <form>
             <input type="text" placeholder="Name">
-            <input type="text" placeholder="date">
+            <input type="date" placeholder="date">
             <button type="submit">Add</button>
         </form>
     </div>
