--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Birth Day</title>
 </head>
 <body>
@@ -10,7 +11,7 @@
         <h1>BirthDay Date</h1>
     </div>
     <div>
-        <form>
+        <form action="/" method="POST" >
             <input type="text" placeholder="Name">
             <input type="date" placeholder="date">
             <button type="submit">Add</button>
