--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
     </div>
     <div>
         <form action="/" method="POST" >
-            <input type="text" placeholder="Name">
-            <input type="date" placeholder="date">
+            <input type="text" name="name" placeholder="Name">
+            <input type="date" name="day" placeholder="date">
             <button type="submit">Add</button>
         </form>
     </div>
