--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,18 @@
 body{
     background-image: url(https://png.pngtree.com/thumb_back/fw800/back_pic/03/88/76/7857d6bc488b892.jpg);
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
+}
+
+h1{
+    text-align: center;
+    color: beige;
+}
+
+*{
+    text-align: center;
+}
+
+li{
+    color: beige;
 }
