--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,5 +17,12 @@
             <button type="submit">Add</button>
         </form>
     </div>
+    <div>
+        <ul>
+            <%for(let i in birthday){%>
+            <li><%=birthday[i].name%> ----- <%=birthday[i].day%></li>
+            <%}%>
+        </ul>
+    </div>
 </body>
 </html>
